--- a/package.json
+++ b/package.json
@@ -38,8 +38,16 @@
   },
   "dependencies": {
     "@babel/node": "7.12.10",
+    "body-parser": "1.19.0",
+    "connect-mongo": "3.2.0",
+    "cookie-parser": "1.4.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
-    "morgan": "1.10.0"
+    "express-session": "1.17.1",
+    "mongoose": "5.11.11",
+    "morgan": "1.10.0",
+    "passport": "0.4.1",
+    "passport-local": "1.0.0",
+    "passport-local-mongoose": "6.1.0"
   }
 }
